[package]
name = "peer_stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
priority-queue = "1.2.1"
tokio = "0.3"
futures = "0.3.21"
env_logger = "0.9.0"
async-std = {version = "1.11.0", features = ["attributes"]}
clap = { version = "3.1.8", features = ["derive"]}
concurrent-queue = "1.2.2"
console = "0.15.0"
crossbeam = "0.8.1"
farmhash = "1.1.5"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1.7"
serde_json = "1.0.59"
serde_with = "1.12.1"